Refactor Requested Changes