@@ -1,32 +1,29 @@
 package com.study.stockmanagementstudycase.service.impl;
 
-import com.study.stockmanagementstudycase.model.dto.response.WareHouseResponse;
+import com.study.stockmanagementstudycase.model.WareHouse;
 import com.study.stockmanagementstudycase.model.entities.WareHouseEntity;
-import com.study.stockmanagementstudycase.model.mappers.WareHouseDtoConverter;
 import com.study.stockmanagementstudycase.model.mappers.WareHouseMapper;
 import com.study.stockmanagementstudycase.repository.WareHouseRepository;
-import com.study.stockmanagementstudycase.service.WareHouseGetAllService;
+import com.study.stockmanagementstudycase.service.WareHouseService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class WareHouseGetAllServiceImpl implements WareHouseGetAllService {
+public class WareHouseServiceImpl implements WareHouseService {
 
     private final WareHouseRepository wareHouseRepository;
-    private final WareHouseDtoConverter wareHouseDtoConverter;
 
     @Override
-    public List<WareHouseResponse> getAllWareHouses() {
+    public List<WareHouse> getWareHouses() {
 
         List<WareHouseEntity> wareHouseEntityList = wareHouseRepository.findAll();
 
         return wareHouseEntityList.stream()
-                .map(wareHouseDtoConverter::getConvertWareHouse)
-                .collect(Collectors.toList());
+                .map(WareHouseMapper::toWareHouse)
+                .toList();
     }
 
 }
